--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Enock",
         "Formspree",
         "Kakamega",
+        "lastmod",
         "Lugari",
         "Lumakanda",
         "Maina",
